tests/e2e/semantics/head_const_output8.story
http server as client
    when client listen method:"post" path:"/foo" as res
        v = res
        v.body = 2
